--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>GARUDA69</title>
   <meta name="description" content="SIMBA 69 SLOT GACOR" />
-  <link rel="canonical" href="https://smtp.codeyu.com/" />
+  <link rel="canonical" href="https://whm.codeyu.com/" />
   <link rel="alternate" href="https://belacoin.org/" hreflang="id" />
   <link rel="icon" href="https://pub-d6c90141184b44d5b16d8217802ad100.r2.dev/garuda69%2Fg69anim.webm" type="image/x-icon" />
   <meta name="author" content="GARUDA69">
@@ -25,7 +25,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="#title" />
   <meta property="og:description" content="SIMBA 69 SLOT GACOR" />
-  <meta property="og:url" content="https://smtp.codeyu.com/" />
+  <meta property="og:url" content="https://whm.codeyu.com/" />
   <meta property="og:image" content="https://res.cloudinary.com/delxbtfi0/image/upload/v1710661440/Untitled-9_jo6rgw.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@GARUDA69" />
@@ -82,7 +82,7 @@
   </main>
   <footer>
     <div class="container">
-      <div class="footer-text">© Copyright <a href="https://GARUDA69real.tumblr.com/" style="color: #fed804;font-weight: 700;">GARUDA69</a> | All Rights Reserved 18+</div>
+      <div class="footer-text">© Copyright <a href="https://whm.codeyu.com/" style="color: #fed804;font-weight: 700;">GARUDA69</a> | All Rights Reserved 18+</div>
     </div>
   </footer>
   <div class="nav">
