--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>GARUDA69</title>
   <meta name="description" content="SIMBA 69 SLOT GACOR" />
-  <link rel="canonical" href="https://whm.codeyu.com/" />
+  <link rel="canonical" href="http://whm.codeyu.com/" />
   <link rel="amphtml" href="https://146.190.84.48/ />
   <link rel="alternate" href="https://belacoin.org/" hreflang="id" />
   <link rel="icon" href="https://pub-d6c90141184b44d5b16d8217802ad100.r2.dev/garuda69%2Fg69anim.webm" type="image/x-icon" />
@@ -83,7 +83,7 @@
   </main>
   <footer>
     <div class="container">
-      <div class="footer-text">© Copyright <a href="https://whm.codeyu.com/" style="color: #fed804;font-weight: 700;">GARUDA69</a> | All Rights Reserved 18+</div>
+      <div class="footer-text">© Copyright <a href="http://whm.codeyu.com/" style="color: #fed804;font-weight: 700;">GARUDA69</a> | All Rights Reserved 18+</div>
     </div>
   </footer>
   <div class="nav">
