--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>GARUDA69</title>
   <meta name="description" content="SIMBA 69 SLOT GACOR" />
+  <link rel="amphtml" href="https://138-cdn.com/amp/simba69/152.42.212.122/" />
   <link rel="canonical" href="http://whm.codeyu.com/" />
   <link rel="alternate" href="https://belacoin.org/" hreflang="id" />
   <link rel="icon" href="https://pub-d6c90141184b44d5b16d8217802ad100.r2.dev/garuda69%2Fg69anim.webm" type="image/x-icon" />
