--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
         <amp-img layout="intrinsic" height="100" width="100" src="https://ampku.garudagroup.org/assets/icon/icon-home.webp" alt="Home"></amp-img>
         HOME
       </a>
-      <a href="https://moveurls.com/amploginGARUDA69" rel="nofollow noopener" target="_blank">
+      <a href="https://moveurls.com/amplogingarudatoto" rel="nofollow noopener" target="_blank">
         <amp-img layout="intrinsic" height="100" width="100" src="https://ampku.garudagroup.org/assets/icon/icon-login.webp" alt="Login"></amp-img>
         LOGIN
       </a>
-      <a href="https://rapidtrackurl.com/amploginGARUDA69" rel="nofollow noopener" class="tada" target="_blank">
+      <a href="https://rapidtrackurl.com/amplogingaruda69" rel="nofollow noopener" class="tada" target="_blank">
         <amp-img class="center" layout="intrinsic" height="120" width="120" src="https://ampku.garudagroup.org/assets/icon/icon-daftar.webp" alt="Daftar"></amp-img>
         DAFTAR
       </a>
-      <a href="https://tinyurl.com/amploginGARUDA69" rel="nofollow noopener" target="_blank">
+      <a href="https://tinyurl.com/amploginaruda69" rel="nofollow noopener" target="_blank">
         <amp-img layout="intrinsic" height="100" width="100" src="https://ampku.garudagroup.org/assets/icon/icon-promo.webp" alt="Promo Bonus"></amp-img>
         PROMO
       </a>
-      <a href="https://moveurls.com/lcGARUDA69" rel="nofollow noopener" target="_blank">
+      <a href="https://moveurls.com/garuda69-lc" rel="nofollow noopener" target="_blank">
         <amp-img layout="intrinsic" height="100" width="100" src="https://ampku.garudagroup.org/assets/icon/icon-chat.webp" alt="Livechat"></amp-img>
         LIVECHAT
       </a>
